# Coda

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  activate.bat  activate.sh  environment_config.json  pyproject.toml  requirements-voice.txt  test_moshi_integration.py  test_phase1.py  test_processing_modes.py  test_tools_integration_standalone.py  test_voice_llm_integration.py
audits/: architecture_integration_analysis.md  audit_remediation_report.md  audit_report_20250711_112512.json  code_quality_remediation_plan.md  comprehensive_audit_analysis.md  comprehensive_audit_summary_2025.md  comprehensive_deep_audit_plan.md  dependency_audit_report_2025.md  phase4_completion_summary.md  phase5_completion_summary.md  phase5_testing_infrastructure_analysis.md  rtx5090_performance_optimization.md  run_comprehensive_audit.py
configs/: default.yaml
configs/voice/: development.yaml  lightweight.yaml  production.yaml  testing.yaml
docs/: API_REFERENCE.md  CONFIGURATION.md  DEPLOYMENT_GUIDE.md  INSTALLATION_GUIDE.md  MIGRATION_GUIDE.md  PERFORMANCE_BENCHMARKS.md  README.md  SYSTEM_STATUS.md  TROUBLESHOOTING.md  USER_GUIDE.md  VOICE_SYSTEM_PLAN.md  phase2_moshi_integration_summary.md  system_audit_report.md  voice_api_reference.md  voice_documentation_improvements.md  voice_performance_optimizations.md  voice_processing_system.md  websocket_integration_guide.md
docs/api/: README.md  memory.md  voice.md
examples/: README.md  basic_voice_chat.py  memory_integration.py
scripts/: comprehensive_demo.py  dashboard_demo.py  execute_testing_phase.py  llm_demo.py  memory_demo.py  personality_demo.py  run_comprehensive_tests.py  setup.py  tools_demo.py  validate_deployment.py  validate_system.py  websocket_demo.py
scripts/debug/: check_imports.py  debug_llm_exception.py  debug_llm_minimal.py  validate_core_system.py
scripts/demos/: end_to_end_demo.py  interactive_coda_test.py  run_coda_full_system.py  run_coda_simple.py
scripts/utilities/: cleanup_voice_code.py  coda_launcher.py  fix_unused_imports.py  setup_environment.py
src/coda/: __init__.py  cli.py
src/coda/components/llm/: README.md  __init__.py  base_provider.py  conversation_manager.py  function_calling_orchestrator.py  interfaces.py  manager.py  models.py  prompt_enhancer.py  websocket_integration.py
src/coda/components/memory/: README.md  __init__.py  encoder.py  interfaces.py  long_term.py  manager.py  models.py  short_term.py  websocket_integration.py
src/coda/components/personality/: README.md  __init__.py  behavioral_conditioner.py  interfaces.py  manager.py  models.py  parameters.py  personal_lore.py  prompt_enhancer.py  session_manager.py  topic_awareness.py  (+1 more)
src/coda/core/: __init__.py  assistant.py  component_health.py  component_recovery.py  config.py  config_adapters.py  config_validator.py  connection_pool.py  error_management.py  event_coordinator.py  events.py  integration.py  model_validator.py  optimized_cache.py  performance_decorators.py  performance_monitor.py  performance_optimizer.py  rtx5090_optimizer.py  session_manager.py  user_error_interface.py  websocket_integration.py
tests/: phase1_5_edge_case_tests.py  phase1_5_stress_tests.py  stress_test_detailed_report.json
tests/edge_cases/: test_edge_case_scenarios.py
tests/integration/: test_conversation_flow.py  test_integration_structure.py  test_memory_llm_integration.py  test_system_integration.py  test_voice_pipeline_integration.py  test_websocket_integration.py
tests/legacy/: test_audio_streaming.py  test_breaking_changes_validation.py  test_chat_simple.py  test_chromadb_migration.py  test_code_quality_validation.py  test_component_integration.py  test_conversation_sync.py  test_deprecated_patterns.py  test_documentation.py  test_end_to_end_interface.py  test_fallback_manager.py  test_final_optimization.py  test_fixes_validation.py  test_framework_versions.py  test_gpu_moshi.py  test_hybrid_orchestrator.py  test_import_conflicts.py  test_interactive_chat.py  test_latency_optimizer.py  test_llm_manager_integration.py  test_memory_integration.py  test_moshi.py  test_moshi_simple.py  test_multimodal_sessions.py  test_ollama_integration.py  test_parallel_processor.py  test_performance_optimization.py  test_personality_integration.py  test_phase1_centralized_system.py  test_phase1_simple.py  test_pydantic_migration.py  test_rtx5090.py  test_rtx5090_optimizer.py  test_system_health.py  test_testing_infrastructure.py  test_tools_integration.py  test_voice_context_integration.py  test_voice_model_manager.py  test_voice_performance_optimizer.py  test_voice_processing_pipeline.py  (+1 more)
tests/performance/: test_gpu_performance.py  test_memory_performance.py  test_performance_baseline.py  test_rtx5090_optimization.py  test_system_load.py  test_voice_performance.py  test_websocket_load.py
tests/reports/: phase1_5_comprehensive_test_report.md
tests/stress/: test_comprehensive_stress_suite.py
tests/unit/: test_advanced_audio_processing.py  test_audio_processor_comprehensive.py  test_coverage_boost_simple.py  test_dashboard_server.py  test_integration_layer.py  test_llm_system.py  test_memory_long_term_comprehensive.py  test_memory_system.py  test_moshi_integration.py  test_performance_monitor.py  test_personality_system.py  test_plugin_system.py  test_prompt_enhancer_comprehensive.py  test_tool_system.py  test_websocket_component_integration.py  test_websocket_integration_comprehensive.py  test_websocket_server.py
tests/validation/: test_phase1_validation.py  test_simple_validation.py
tests/voice/: integration_test_summary.md  test_comprehensive_voice_manager.py  test_comprehensive_websocket.py  test_coverage_summary.md  test_error_handling.py  test_hybrid_orchestrator.py  test_integration_full_pipeline.py  test_integration_hybrid_processing.py  test_integration_performance.py  test_llm_integration.py  test_load_stress.py  test_moshi_voice_integration.py  test_performance_benchmarks.py  test_phase1_core_infrastructure.py  test_resource_management.py  test_validation.py  test_voice_websocket_integration.py
(+72 files in other folders)
